# m2m-protocol

./: .gitignore  LICENSE  README.md  broker_server.py  dataset.txt  node_a.py  node_b.py  pyproject.toml  requirements.txt
dashboard/: index.html
examples/: advanced_buyer.py  advanced_seller.py  ai_compute_seller.py  chess_buyer.py  chess_seller.py  simple_buyer.py  simple_seller.py  weather_seller.py
guardian/: dashboard_app.py  index.html
src/m2m_ledger/: __init__.py  client.py
